2007-10-25  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/renderer/xy/XYSplineAndShapeRenderer.java
	(drawPrimaryLineAsPath): Check for duplicated control points,
	(ControlPoint.equals): New method override.

2007-10-25  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/plot/CategoryPlot.java
	(getDomainAxisIndex): Added argument check,
	(getRangeAxisIndex): Likewise.
	
2007-10-25  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/axis/StandardTickUnitSource.java:
	Implemented Serializable,
	(StandardTickUnitSource): Added explicit constructor,
	(equals): New method override,
	(hashCode): Likewise.
	
2007-10-25  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/ChartPanel.java
	(defaultDirectoryForSaveAs): New field,
	(ChartPanel(JFreeChart, int, int, int, int, int, int, boolean, boolean,
	boolean, boolean, boolean, boolean)): Initialise new field,
	(getDefaultDirectoryForSaveAs): New method,
	(setDefaultDirectoryForSaveAs): Likewise,
	(doSaveAs): Apply default directory.
	
2007-10-24  David Gilbert  <david.gilbert@object-refinery.com>

	* experimental/org/jfree/experimental/chart/plot/dial/DialPlot.java
	(pointers): New field,
	(DialPlot): Delegate to new constructor,
	(DialPlot(ValueDataset)): New constructor,
	(addPointer): New method,
	(getPointerIndex): Likewise,
	(removePointer(int)): Likewise,
	(removePointer(DialPointer)): Likewise,
	(getPointerForDataset): Likewise,
	(draw): Draw pointers in their own layer,
	(equals): Check new pointers field,
	* experimental/org/jfree/experimental/chart/plot/dial/DialPointer.java:
	Implemented PublicCloneable,
	(DialPointer): Changed to protected,
	(DialPointer(int)): Likewise, and changed default radius,
	(Pin.setPaint): Added argument check,
	(Pin.setStroke): Likewise,
	(Pointer(int)): Removed radius setting,
	* experimental/org/jfree/experimental/chart/plot/dial/DialTextAnnotation.java